// ====================================================================
// HISTORY
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "./ActivityRequest.proto";
import "./ModeType.proto";

package soo.protobuf;

message Session {
extensions 6 to 106;

  repeated ccsds_mal.protobuf.BLOB functionalChains = 1;
  optional soo.protobuf.ModeType mode = 2;
  optional ccsds_mal.protobuf.STRING name = 3;
  optional soo.protobuf.ActivityRequest activity = 4;
  optional ccsds_mal.protobuf.TIME creationDate = 5;
}
